--- a/src/app/main/contract-signature/components/consider-contract/remote-dialog-sign/remote-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/remote-dialog-sign/remote-dialog-sign.component.html
@@ -3,6 +3,15 @@
     <h3 class="label-header">{{this.datas.title | translate}}</h3>
   </div>
   <form [formGroup]="myForm" class="content">
+    <div class="row">
+      <div class="sign-unit-select">
+        <div class="label text-color">Nhà cung cấp <span class="required-title">*</span></div>
+        <select formControlName="supplier" class="form-select" style="font-size: 14px" aria-label="Default select example">
+          <option value="1">VNPT SmartCA</option>
+          <option value="2" >CA2 Nacencomm</option>
+        </select>
+      </div>
+    </div>
       <div class="row">
           <div class="col-md-12">
               <div class="label text-color">{{'tax_code.cardId' | translate}} <span class="required-title">*</span></div>
@@ -14,7 +23,7 @@
                 <div *ngIf="f.taxCode.errors.pattern">{{'taxcode.format' | translate}}</div>
               </div>
           </div>
-      </div> 
+      </div>
       <div class="row" style="justify-content: center;padding-top: 10px;">
           <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'exit' | translate}}</button>
           <button class="save-button" (click)="onSubmit()">{{'confirm' | translate}}</button>
@@ -38,7 +47,7 @@
                 <div *ngIf="f.taxCode.errors.pattern">{{'taxcode.format' | translate}}</div>
               </div>
           </div>
-      </div> 
+      </div>
       <div class="row" style="justify-content: center;padding-top: 10px; padding-bottom: 1.25em;">
           <button class="cancel-button" (click)="dialog.closeAll()" type="button">{{'exit' | translate}}</button>
           <button class="save-button" (click)="onSubmit()">{{'confirm' | translate}}</button>
